atualização da sessão de produtos

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="titles">
           <h2>Explore Nossos Produtos</h2>
           <p>Nós constantemente acabamos desenvolvendo produtos tendo em relação forte a pesquisa da necessidade do mercado</p>
-            <div class="custom-btn"><a href="#">See all cases<span></span> <i></i></a></div>
+            <div class="custom-btn"><a href="#">Veja todos os Produtos<span></span> <i></i></a></div>
             <!-- end custom-btn -->
           </div>
         <!-- end titles --> 
